<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">blommy</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_jl_h_r_rasuna">Jl. H.R. Rasuna Said No. 444</string>
  <string name="lbl_x1">x1</string>
  <string name="msg_john_jacob_gmai">john.jacob@gmail.com</string>
  <string name="lbl_profile_account">Profile Account</string>
  <string name="lbl_reviews">Reviews</string>
  <string name="lbl_order_summary">Order Summary</string>
  <string name="msg_2020_05_05_10_2">2020-05-05 10:21:13</string>
  <string name="lbl_next">Next</string>
  <string name="lbl4">+</string>
  <string name="lbl_harga_barang">Harga Barang</string>
  <string name="lbl_4_82">4.8</string>
  <string name="lbl_personal_detail">Personal Detail</string>
  <string name="lbl2">***************</string>
  <string name="lbl3">-</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_address_detail">Address Detail</string>
  <string name="msg_duis_aute_irure">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatu Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo con Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es view more</string>
  <string name="lbl_katalog_barang">Katalog Barang</string>
  <string name="lbl_description">Description</string>
  <string name="lbl_cod">COD</string>
  <string name="lbl_ronald_richards">Ronald Richards</string>
  <string name="lbl_buket_box_mawar">buket Box Mawar</string>
  <string name="lbl_help_center">Help Center</string>
  <string name="msg_already_have_ac">Already have account?</string>
  <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="msg_excepteur_sint">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es </string>
  <string name="msg_33_7_65_55_72">(+33)7 65 55 72 67</string>
  <string name="lbl_log_out">Log out</string>
  <string name="lbl_rp_243_123">Rp 243.123</string>
  <string name="lbl_submit2">SUBMIT</string>
  <string name="lbl_52">(5)</string>
  <string name="msg_transaction_his">Transaction History</string>
  <string name="msg_pilih_pembayara">Pilih Pembayaran</string>
  <string name="lbl_john">john</string>
  <string name="lbl_beri_ulasan">Beri Ulasan </string>
  <string name="lbl_dewaflorist22">DewaFlorist2</string>
  <string name="lbl_flower_box">flower box</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_dewaflorist">Dewaflorist</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_courtney_henry">Courtney Henry</string>
  <string name="lbl_edit_profile2">Edit profile</string>
  <string name="lbl_42">4</string>
  <string name="lbl_katona_beatrix">Katona Beatrix</string>
  <string name="lbl_history">History</string>
  <string name="lbl_delivery_adress">Delivery Adress</string>
  <string name="lbl_ongkir">Ongkir</string>
  <string name="lbl_bouquet_mawar2">Bouquet Mawar</string>
  <string name="msg_ut_enim_ad_mini">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut al</string>
  <string name="lbl_view_more">view more</string>
  <string name="lbl_rp_246_123"> Rp 246.123</string>
  <string name="lbl_09_30_am">09.30 AM</string>
  <string name="lbl_harga">harga </string>
  <string name="lbl_bouquet_mawar">Bouquet mawar</string>
  <string name="lbl_welcome">WELCOME</string>
  <string name="lbl_buket_mawar">Buket mawar</string>
  <string name="lbl_rp_124_000">Rp 124.000</string>
  <string name="lbl_user">User</string>
  <string name="lbl_32">3</string>
  <string name="lbl_33">(3)</string>
  <string name="lbl_password">PASSWORD</string>
  <string name="msg_2020_05_06_11_2">2020-05-06 11:24:08</string>
  <string name="lbl_inv619253">INV619253</string>
  <string name="lbl_self_pick_up">Self Pick Up</string>
  <string name="msg_tuliskan_ulasan">tuliskan ulasan anda</string>
  <string name="lbl_30_reviews">(30 reviews)</string>
  <string name="lbl_account">Account</string>
  <string name="lbl_city">City</string>
  <string name="lbl_rp_100_000">Rp 100.000</string>
  <string name="lbl_ubah">ubah</string>
  <string name="lbl_whislist">Whislist</string>
  <string name="lbl_20">(20)</string>
  <string name="lbl_rp_0">Rp 0</string>
  <string name="lbl_l_szl_cintia">László Cintia</string>
  <string name="lbl_phone_number2">Phone number</string>
  <string name="lbl_22">(2)</string>
  <string name="lbl_standing_flower">standing flower</string>
  <string name="lbl_flowers">Flowers</string>
  <string name="lbl_postal_code">Postal Code</string>
  <string name="lbl_100">100</string>
  <string name="msg_delivery_addres">Delivery Address</string>
  <string name="lbl_indonesia">Indonesia</string>
  <string name="lbl_jawa_timur">Jawa Timur</string>
  <string name="lbl_province">Province</string>
  <string name="lbl_hapus">Hapus</string>
  <string name="lbl_barangku">Barangku</string>
  <string name="lbl_4_8">4.8★</string>
  <string name="lbl_log_in">Log  in </string>
  <string name="lbl_total">Total </string>
  <string name="lbl_tambah_barang">Tambah Barang</string>
  <string name="lbl_dewaflorist1">DewaFlorist1</string>
  <string name="lbl_chats">Chats</string>
  <string name="lbl_dewaflorist2">DEWAFLORIST</string>
  <string name="lbl_dewaflorist3">DewaFlorist3</string>
  <string name="lbl_email_adress">Email Adress</string>
  <string name="lbl_kategori">Kategori</string>
  <string name="lbl_subdistrict">Subdistrict</string>
  <string name="lbl_dianne_russell">Dianne Russell</string>
  <string name="lbl_login2">Login</string>
  <string name="lbl_delivery">Delivery</string>
  <string name="lbl_get_started">Get Started </string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="lbl_m_banking">M-BANKING</string>
  <string name="lbl_new_address">New Address</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit,..</string>
  <string name="lbl_checkout2">CHECKOUT</string>
  <string name="lbl_seller">Seller</string>
  <string name="lbl_buket">buket</string>
  <string name="lbl">★</string>
  <string name="lbl_register">Register</string>
  <string name="lbl_submit">Submit</string>
  <string name="lbl_kategori3">kategori</string>
  <string name="msg_perlihatkan_nam">perlihatkan nama anda</string>
  <string name="lbl_rp_3_000"> Rp 3.000</string>
  <string name="msg_2020_05_01_06_0">2020-05-01 06:05:46</string>
  <string name="lbl_hand_bucket">hand bucket</string>
  <string name="lbl_kategori2">Kategori </string>
  <string name="lbl_kota_malang">Kota Malang</string>
  <string name="lbl_email">eMAIL</string>
  <string name="lbl_atur_pengiriman">Atur Pengiriman </string>
  <string name="lbl_lihat_semua">Lihat semua</string>
  <string name="lbl_deskripsi2">deskripsi</string>
  <string name="lbl_search">search</string>
  <string name="lbl_0">(0)</string>
  <string name="lbl_1">1</string>
  <string name="lbl_2">2</string>
  <string name="lbl_add_to_cart">Add to Cart</string>
  <string name="lbl_nama_barang2">nama barang</string>
  <string name="lbl_5">5</string>
  <string name="msg_shopping_addres">Shopping Address</string>
  <string name="lbl_checkout">Checkout</string>
  <string name="msg_duis_aute_irure2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatu Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo con</string>
  <string name="lbl_banyak_barang">banyak barang</string>
  <string name="lbl_lorem_ipsum">Lorem ipsum </string>
  <string name="lbl_cart">Cart</string>
  <string name="lbl_more">more</string>
  <string name="lbl_ubah_barang">ubah Barang</string>
  <string name="msg_doesn_t_have_ac">Doesn\u2019t have account?</string>
  <string name="lbl_nama_barang">Nama Barang</string>
  <string name="lbl_tambah_ulasan">Tambah Ulasan </string>
  <string name="lbl_17_00">17:00</string>
  <string name="lbl_rating_ulasan">Rating &amp; Ulasan</string>
  <string name="lbl_alamat">Alamat</string>
  <string name="lbl_john_jacob">John  Jacob</string>
  <string name="lbl_product">product</string>
  <string name="lbl_address">Address</string>
  <string name="lbl_87201">87201</string>
  <string name="lbl_20_items">20 items</string>
  <string name="lbl_deskripsi">Deskripsi </string>
  <string name="lbl_full_name">Full Name</string>
  <string name="lbl_rekomendasi">Rekomendasi</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>
