<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.blommy.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegister"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackregister"
            android:layout_height="@dimen/_673pxv" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearColumnvector"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylered_300">
                <FrameLayout android:id="@+id/frameStackvector"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_100pxv"
                    android:layout_marginBottom="@dimen/_146pxv"
                    android:layout_marginEnd="@dimen/_130pxh"
                    android:layout_marginStart="@dimen/_130pxh"
                    android:layout_marginTop="@dimen/_106pxv"
                    android:layout_width="@dimen/_100pxh" style="@style/groupStylewhite_2">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_62pxh"
                        android:layout_marginHorizontal="@dimen/_19pxh"
                        android:layout_marginVertical="@dimen/_19pxv"
                        android:layout_width="@dimen/_62pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_vector_62x62}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_62x62"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearColumnregister"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_3">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRegister"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.09"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtRegister}"
                    android:textAllCaps="true"
                    style="@style/txtOutfitmedium20" tools:text="@string/lbl_register"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtUsername"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtUsername}"
                    android:textAllCaps="true"
                    style="@style/txtOutfitregular10" tools:text="@string/lbl_username"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtJohn"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtJohn}"
                    style="@style/txtOutfitregular10_1" tools:text="@string/lbl_john"/>
                <View android:background="@color/black_900_4c"
                    android:id="@+id/lineLineOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_247pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPhonenumber"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtPhonenumber}"
                    android:textAllCaps="true"
                    style="@style/txtOutfitregular10" tools:text="@string/lbl_phone_number2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt337655572"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_33pxh"
                    android:layout_marginStart="@dimen/_33pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txt337655572}"
                    style="@style/txtOutfitregular10_1" tools:text="@string/msg_33_7_65_55_72"/>
                <View android:background="@color/black_900_4c"
                    android:id="@+id/lineLineOneOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_247pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEMAIL"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtEMAIL}"
                    android:textAllCaps="true"
                    style="@style/txtOutfitregular10" tools:text="@string/lbl_email"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmailOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtEmailOne}"
                    style="@style/txtOutfitregular10_1" tools:text="@string/msg_john_jacob_gmai"/>
                <View android:background="@color/black_900_4c"
                    android:id="@+id/lineLineOneTwo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_247pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPASSWORD"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtPASSWORD}"
                    android:textAllCaps="true"
                    style="@style/txtOutfitregular10" tools:text="@string/lbl_password"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/lbl2"
                    android:id="@+id/etPasswordOne"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.04"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@={registerVM.registerModel.etPasswordOneValue}"
                    android:textColorHint="@color/black_900_a9"
                    style="@style/etOutfitregular10" tools:ignore="Autofill"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowgroupfiftyone"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_45pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroupFiftyOne"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_1pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_1pxv"
                        android:singleLine="true"
                        android:text="@{registerVM.registerModel.txtGroupFiftyOne}"
                        style="@style/txtSolidRoundedLeftCorner" tools:text="@string/lbl_user"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroupFifty"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_1pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_1pxv"
                        android:singleLine="true"
                        android:text="@{registerVM.registerModel.txtGroupFifty}"
                        style="@style/txtSolidRoundedRightCornerOutline" tools:text="@string/lbl_seller"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSubmit"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_90pxh"
                android:layout_marginStart="@dimen/_90pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_submit2"
                android:textAllCaps="true"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_submit2"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtAlreadyhaveac"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_121pxh"
            android:layout_marginStart="@dimen/_121pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtAlreadyhaveac}"
            style="@style/txtOutfitmedium12" tools:text="@string/msg_already_have_ac"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_121pxh"
            android:layout_marginStart="@dimen/_121pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtLanguage}"
            style="@style/txtOutfitmedium12_1" tools:text="@string/lbl_log_in"/>
    </LinearLayout>
</layout>
