<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listrectanglesixtyseven1RowModel" type="com.blommy.app.modules.homeseller.data.model.Listrectanglesixtyseven1RowModel"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnrectanglesixtyseven"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <ImageView android:id="@+id/imageRectangleSixtySeven"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_70pxh"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="@dimen/_80pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_ellipse1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse1"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtBouquetmawar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{listrectanglesixtyseven1RowModel.txtBouquetmawar}"
            style="@style/txtRobotoromanbold10" tools:text="@string/lbl_bouquet_mawar"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDewaflorist"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listrectanglesixtyseven1RowModel.txtDewaflorist}"
            style="@style/txtRobotoromanregular9" tools:text="@string/lbl_dewaflorist"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFortyEight"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listrectanglesixtyseven1RowModel.txtFortyEight}"
            style="@style/txtRobotoromanregular12" tools:text="@string/lbl_4_8"/>
    </LinearLayout>
</layout>
